Add search functionality and imroved ui for ManufacturingPane